:memo: Nova doucmentacao de rota cadastro de usuario e tambem a rota de login
