# api-temperatura/internal/controllers/login.go
@@ -9,6 +9,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Login godoc
+// @Summary Efetua Login de usuario
+// @Description Efetua o login de um usuario com base nos dados fornecidos
+// @Tags Login
+// @Accept json
+// @Produce json
+// @Param user body models.Login true "Dados de login do usuario"
+// @Success 200 {string} string "Token gerado com sucesso"
+// @Failure 400 {object} string "Erro de solicitacao: Nao foi possivel enviar o body"
+// @Failure 401 {object} string "Erro interno do servidor: Erro ao gerar o token"
+// @Failure 500 {object} string "Erro interno do servidor: Erro ao gerar o token"
+// @Router /login [post]
 func Login(c *gin.Context) {
 	var login models.Login
 	err := c.ShouldBindJSON(&login)
